# deltachat-loginbot

./: Cargo.toml  DISCOURSE.md  README.md  example_config.toml  gen_secret.sh  loginbot.service
.github/workflows/: check.yml
docs/: DISCOURSE.md  HOW-TO-RUN.md
scripts/: gen_secret.sh
src/: api.rs  config.rs  lib.rs  main.rs  queries.rs  shutdown_signal.rs
static/: login.html  styles.css
tests/: login_flow.rs
