[package]
name = "deltachat-loginbot"
version = "0.4.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
deltachat = { git = "https://github.com/chatmail/core", tag = "v2.47.0" }
serde = { version = "1.0.159", features = ["serde_derive"] }
sled = "0.34.7"
axum = { version = "0.7", features = ["form", "query", "json", "http1", "tokio"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tokio = { version = "1.28", features = ["full"] }
toml = { version = "0.7.3", features = ["parse"] }
uuid = { version = "1.3.1", features = ["fast-rng", "v4"] }
tower-sessions = { version = "0.12", features = ["memory-store"] }
time = "0.3"
tower = "0.4.13"
hyper = { version = "1", features = ["full"] }
serde_json = "1.0.96"
mime = "0.3.17"
axum-extra = { version = "0.9", features = ["form", "query", "typed-header"] }
headers = "0.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
log = "0.4.17"
url = "2"

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
data-encoding = "2"
reqwest = { version = "0.12", features = ["cookies", "json"] }
url = "2"
